fix: recipes pages

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
     <main class="container">
         <div class="recipes">
-            <a class="box" href="/recipes/pizza.html">
+            <a class="box" href="./recipes/pizza.html">
                 <div class="image-section">
                     <img class="image" src="assets/images/recipes/pizza.webp">
                 </div>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
             </a>
-            <a class="box" href="/recipes/bolo.html">
+            <a class="box" href="./recipes/bolo.html">
                 <div class="image-section">
                     <img class="image" src="assets/images/recipes/bolo-cenoura.png">
                 </div>
@@ -135,7 +135,7 @@
                     </div>
                 </div>
             </a>
-            <a class="box" href="/recipes/strogonoff.html">
+            <a class="box" href="./recipes/strogonoff.html">
                 <div class="image-section">
                     <img class="image" src="assets/images/recipes/strogonoff-frango.png">
                 </div>
@@ -169,7 +169,7 @@
                 </div>
             </a>
 
-            <a class="box" href="/recipes/brigadeiro.html">
+            <a class="box" href="./recipes/brigadeiro.html">
                 <div class="image-section">
                     <img class="image" src="assets/images/recipes/brigadeiro.png">
                 </div>
@@ -202,7 +202,7 @@
                     </div>
                 </div>
             </a>
-            <a class="box" href="/recipes/pao-de-queijo.html">
+            <a class="box" href="./recipes/pao-de-queijo.html">
                 <div class="image-section">
                     <img class="image" src="assets/images/recipes/pao-queijo.png">
                 </div>
